--- a/index.html
+++ b/index.html
@@ -7,13 +7,156 @@
     <link rel="stylesheet" href="output.css" />
   </head>
   <body class="flex items-center justify-center min-h-screen">
-    <div class="w-[1200px] h-[700px] rounded-3xl flex shadow-xl overflow-hidden">
+    <div
+      class="w-[1200px] h-[700px] rounded-3xl flex shadow-xl overflow-hidden"
+    >
       <div class="relative w-1/2 h-full rounded-l-3xl overflow-hidden">
-       <div class="bg-[url('./Images/minimalistic-student-photo.jpg')] w-full h-full bg-cover bg-center bg-no-repeat"></div>
-       <div class="absolute inset-0 bg-blue-500"></div>
+        <div
+          class="bg-[url('./Images/minimalistic-student-photo.jpg')] w-full h-full bg-cover bg-center bg-no-repeat"
+        ></div>
       </div>
-      <div class="bg-white w-1/2 h-full rounded-r-3xl">
-       <h1 class="text-5xl ml-24 font-bold text-blue-500">Student Signup</h1>
+      <div class="bg-blue-500 w-1/2 h-full rounded-r-3xl">
+        <h1 class="text-5xl ml-32 mt-12 font-bold text-white">
+          Student Signup
+        </h1>
+        <p class="text-white mt-5 ml-[142px]">
+          Hey enter your details to create your account
+        </p>
+
+        <div class="mt-8 space-y-4 w-80 ml-[142px]">
+          <div class="relative">
+            <div
+              class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500"
+            >
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+            <input
+              type="text"
+              placeholder="Enter your Name"
+              class="w-full pl-12 pr-4 py-4 bg-white rounded-xl border-0 text-gray-700 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-300"
+            />
+          </div>
+
+          <div class="relative">
+            <div
+              class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500"
+            >
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 2C13.1 2 14 2.9 14 4V5H10V4C10 2.9 10.9 2 12 2ZM21 6V8H3V6C3 4.9 3.9 4 5 4H7V5C7 6.1 7.9 7 9 7H15C16.1 7 17 6.1 17 5V4H19C20.1 4 21 4.9 21 6ZM3 19V10H21V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+            <input
+              type="email"
+              placeholder="Enter your Email"
+              class="w-full pl-12 pr-4 py-4 bg-white rounded-xl border-0 text-gray-700 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-300"
+            />
+          </div>
+
+          <div class="relative">
+            <div
+              class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500"
+            >
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+            <input
+              type="tel"
+              placeholder="Enter your Phone"
+              class="w-full pl-12 pr-4 py-4 bg-white rounded-xl border-0 text-gray-700 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-300"
+            />
+          </div>
+
+          <div class="relative">
+            <div
+              class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500"
+            >
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 2C13.1 2 14 2.9 14 4V5H10V4C10 2.9 10.9 2 12 2ZM21 6V8H3V6C3 4.9 3.9 4 5 4H7V5C7 6.1 7.9 7 9 7H15C16.1 7 17 6.1 17 5V4H19C20.1 4 21 4.9 21 6ZM3 19V10H21V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+            <input
+              type="password"
+              placeholder="Create Password"
+              class="w-full pl-12 pr-4 py-4 bg-white rounded-xl border-0 text-gray-700 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-300"
+            />
+          </div>
+          <button
+            class="w-80 h-12 rounded-xl bg-orange-400 text-white font-semibold transition-all duration-300 ease-out hover:bg-white hover:text-orange-400 hover:border-4 hover:border-orange-400"
+          >
+            Sign up
+          </button>
+        </div>
+        <div>
+          <p class="text-white mt-7 font-semibold ml-[250px]">
+          Or Signup with
+        </p>
+        </div> 
+
+        <div class="mt-5 flex justify-center gap-5">
+        <div>
+            <button class="text-gray px-6 py-3 rounded-lg bg-white border flex items-center gap-3 transition-all duration-300 ease-out hover:shadow-2xl">
+                <!-- Google Icon -->
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                    <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                    <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                    <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                </svg>
+                Google
+            </button>
+        </div>
+        <div>
+            <button class="text-gray-700 px-6 py-3 rounded-lg bg-white border flex items-center gap-3 transition-all duration-300 ease-out hover:shadow-2xl">
+                <!-- Facebook Icon -->
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="#1877F2"/>
+                </svg>
+                Facebook
+            </button>
+        </div>
+    </div>
+    <div class="ml-[180px] mt-5">
+      <p class="text-white">Already have an account? <span class="text-orange-400 font-semibold hover:cursor-pointer">Sign in</span></p>
+    </div>
       </div>
     </div>
   </body>
